--- a/V-E.html
+++ b/V-E.html
@@ -128,7 +128,7 @@ width:65%;
 margin:130px 10px;
 border-radius:30px 5px 30px 30px;
 box-shadow:2px 2px 5px black;
-line-height:33px;
+line-height:;
 }
 
 .w-d-q{
@@ -148,7 +148,7 @@ width:65%;
 margin:190px 10px;
 border-radius:30px 5px 30px 30px;
 box-shadow:2px 2px 5px black;
-line-height:33px;
+line-height:;
 }
 
 .t-d-q{
