--- a/V-E.html
+++ b/V-E.html
@@ -233,7 +233,7 @@ padding-right:3px;
 
 <div class="w-d-a">
 <p class="d-a">
-هو موقع يحتوي على مفردات وتعبيرات منهج Mega Goal 1.2، مقسمة إلى أربعة صفحات إلكترونية تحوي الوحدات المترجمة.
+هو موقع يحتوي على مفردات وتعبيرات منهج Mega Goal 1.2، مقسمة إلى أربع صفحات إلكترونية تحوي الوحدات المترجمة.
 <br>
 أبرز ميزات الموقع:
 <br>
