--- a/V-E4.html
+++ b/V-E4.html
@@ -616,7 +616,7 @@ Keep in touch
 <span class="d-date">1444 - 2023</span>
 </p>
 </footer>
-<script src="https:/alsaha-alelmiya.github.io/Hosting/voices4.js"></script>
+<script src="voices4.js"></script>
 <script>
 function openMenu(){
 document.getElementById("m-img").style.animation ="m-img 0.9s";
