--- a/V-E.html
+++ b/V-E.html
@@ -270,12 +270,7 @@ padding-right:3px;
 </p>
 </div>
 
-<div class="impo-n">
-<img src="https://alsaha-alelmiya.github.io/Hosting/Important.svg" alt="" class="impo-img">
-تنويه!
-<br>
-قد لا يدعم تصميم الصفحات الإلكترونية بعض الشاشات.
-</div>
+<!--important note was here past-->
 
 <div class="trans-div">
 <p class="hint">اضغط على الأزرار للانتقال إلى الوحدة المطلوبة</p>
